# quen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  genetic_simulated_annealing.py  main.py  pyproject.toml  requirements.txt  run_brute_force.py  verify_solutions.py
brute_force_solutions/: nqueens_8_all_92_solutions.json
queenquest/: __init__.py  animation.py  app.py  cli.py  io.py  problem.py  tracing.py  visualizer.py
queenquest/algorithms/: __init__.py  backtracking.py  base.py  brute_force.py  genetic.py  hill_climbing.py  simulated_annealing.py
queens/: __init__.py  problem.py
queens/algorithms/: backtracking.py  brute_force.py  genetic_algorithm.py  hill_climbing.py  simulated_annealing.py
queens/visualization/: visualization.py
solutions/Backtracking/: nqueens_8_solutions.json
solutions/HillClimbing/: nqueens_8_solutions.json
solutions/SimulatedAnnealing/: nqueens_8_solutions.json
tests/: test_nqueens.py
