[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queenquest"
version = "0.1.0"
description = "A beginner-friendly N-Queens course project with animation and multiple solving algorithms."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "matplotlib>=3.8.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.scripts]
queenquest = "queenquest.cli:main"
queenquest-gui = "queenquest.app:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
